--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html> 
 <html> 
-<body> 
+    <head>
+        <script src="./scripts/socket.io.js"></script>
+        <script src="./scripts/jquery.min.js"></script>
+        <script>
+            $(function () {
+                    var socket = io('http://localhost:8100');
+                    socket.on('connect', function () { });
+                    socket.on('event', function (data) {
+                        console.log(data);
+                    });
+                    socket.on('disconnect', function () { });
 
-<?php 
+                    var leave = document.getElementById('leaveBtn');
+                    $('#sendBtn').click(function () {
+                        socket.emit('event', 'hello!');
+                    })
+                    $('leaveBtn').click(function () {
+                        socket.emit('disconnect', 'leave');
+                    })
+                    socket.on('c_hi', function (msg) {
+                        alert(msg)
+                    })
+                })
+         
+        </script>
+        </head>
+<body> 
+        <button id="sendBtn">send</button>
+
+        <button id="leaveBtn">leave</button>
+<!-- <?php 
 echo "Hello World!"; 
-?> 
+?>  -->
 
 </body> 
 </html>
