--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html> 
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script src="./scripts/socket.io.js"></script>
         <script src="./scripts/jquery.min.js"></script>
         <script>
