--- a/UI/test.html
+++ b/UI/test.html
@@ -3,13 +3,24 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
     <!-- http://localhost:9000/UI/test.html -->
     <link href="../font-awesome/css/font-awesome.css" rel="stylesheet" /> 
     <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-    <!-- <link href="../font-awesome.css" rel="stylesheet" />           -->
-    <link href="../scripts/bootstrap/bootstrap.css" rel="stylesheet" />
+    <!-- <link href="../font-awesome.css" rel="stylesheet" />  
+             -->
     <script src="../scripts/bootstrap/jquery.min.js"></script>
+    <link href="../scripts/bootstrap/bootstrap.css" rel="stylesheet" />
     <script src="../scripts/bootstrap/bootstrap.js"></script>
+    
+    <!--[if lte IE 9]>
+    <script src="../bootstrap3/js/bootstrap/respond.min.js"></script>
+    <script src="../bootstrap3/js/bootstrap/html5shiv.min.js"></script>
+    <![endif]-->
+    <!-- <link rel="stylesheet" href="../bootstrap3/css/bootstrap/bootstrap.min.css">
+    <script src="../bootstrap3/js/bootstrap/jquery-1.12.0.min.js"></script>
+    <script src="../bootstrap3/js/bootstrap/bootstrap.min.js"></script> -->
     <title>bootstrap</title>
     <style type="text/css">
         .rating > span:hover:before {
