--- a/UI/test.html
+++ b/UI/test.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
     </div>
-    <div class="container">
+    <div class="container" style="width: 400px;float: left;">
             <div class="list-group">
                     <a class="list-group-item" href="#"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a>
                     <a class="list-group-item" href="#"><i class="fa fa-book fa-fw"></i>&nbsp; Library</a>
