--- a/UI/test.html
+++ b/UI/test.html
@@ -8,8 +8,8 @@
     <!-- http://localhost:9000/UI/test.html -->
     <link href="../font-awesome/css/font-awesome.css" rel="stylesheet" /> 
     <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-    <!-- <link href="../font-awesome.css" rel="stylesheet" />  
-             -->
+   
+             
     <script src="../scripts/bootstrap/jquery.min.js"></script>
     <link href="../scripts/bootstrap/bootstrap.css" rel="stylesheet" />
     <script src="../scripts/bootstrap/bootstrap.js"></script>
@@ -32,7 +32,7 @@
 
 <body>
 
-
+        <!-- file:///字体图标不显示 -->
     <div class="container" style="width: 400px;float: left;">
         <div class="row">
             <div class="col">
