--- a/UI/test.html
+++ b/UI/test.html
@@ -147,6 +147,7 @@
                         <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
     </div>
+    <div ></div>
 </body>
 
 </html>
